<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <com.yannis.common.widget.SwitchButtonItemView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        app:sbi_dividerPaddingLeft="10dp"
        app:sbi_dividerPaddingRight="10dp"
        app:sbi_label="@string/settings_mobileNetworkNoLoad" />

    <com.yannis.common.widget.SwitchButtonItemView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        app:sbi_dividerPaddingLeft="10dp"
        app:sbi_label="@string/settings_msgRemind" />

    <com.yannis.common.widget.SwitchButtonItemView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        app:sbi_dividerPaddingLeft="10dp"
        app:sbi_dividerPaddingRight="10dp"
        app:sbi_label="@string/settings_downloadFinishToInstall" />

    <com.yannis.common.widget.SwitchButtonItemView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        app:sbi_dividerPaddingLeft="10dp"
        app:sbi_dividerPaddingRight="10dp"
        app:sbi_label="@string/settings_deleteSourceFile" />

    <include layout="@layout/view_divider_thick" />

    <com.yannis.common.widget.SwitchButtonItemView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        app:sbi_dividerPaddingLeft="10dp"
        app:sbi_dividerPaddingRight="10dp"
        app:sbi_hasToggleButton="false"
        app:sbi_label="@string/settings_checkUpdate"
        app:sbi_rightIcon="@drawable/icon_arrow" />

    <com.yannis.common.widget.SwitchButtonItemView
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:background="@color/white"
        app:sbi_dividerPaddingLeft="10dp"
        app:sbi_dividerPaddingRight="10dp"
        app:sbi_hasToggleButton="false"
        app:sbi_label="@string/settings_aboutUs"
        app:sbi_rightIcon="@drawable/icon_arrow" />

</LinearLayout>