<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ll_mod"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:visibility="invisible">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:background="@android:color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal"
        >

        <TextView
            android:id="@+id/tv_topNewGame"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="3dp"
            android:drawableTop="@mipmap/home_newgame"
            android:gravity="center_horizontal"
            android:text="@string/home_newGame"
            android:textColor="@color/text_black"
            android:textSize="@dimen/top_mini_size"/>

        <TextView
            android:id="@+id/tv_topOpenService"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="3dp"
            android:drawableTop="@mipmap/home_open"
            android:gravity="center_horizontal"
            android:text="@string/home_openService"
            android:textColor="@color/text_black"
            android:textSize="@dimen/top_mini_size"/>

        <TextView
            android:id="@+id/tv_topRankingList"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="3dp"
            android:drawableTop="@mipmap/home_ranklist"
            android:gravity="center_horizontal"
            android:text="@string/home_rankingList"
            android:textColor="@color/text_black"
            android:textSize="@dimen/top_mini_size"/>

        <TextView
            android:id="@+id/tv_topGameSelection"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="3dp"
            android:drawableTop="@mipmap/home_selection"
            android:gravity="center_horizontal"
            android:text="@string/home_gameSelection"
            android:textColor="@color/text_black"
            android:textSize="@dimen/top_mini_size"/>

        <TextView
            android:id="@+id/tv_topMakeMoney"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:drawablePadding="3dp"
            android:drawableTop="@mipmap/home_makemoney"
            android:gravity="center_horizontal"
            android:text="@string/home_makeMoney"
            android:textColor="@color/text_black"
            android:textSize="@dimen/top_mini_size"/>
    </LinearLayout>

    <include layout="@layout/view_divider_slender"/>
</LinearLayout>